--- a/frontend/src/pages/register/register.scss
+++ b/frontend/src/pages/register/register.scss
@@ -29,7 +29,19 @@
           center;
       background-size: cover;
       color: white;
+      
+      h1{
+        font-size: 60px;
+        font-weight: bold;
+        text-wrap: wrap;
+      }
 
+      p{
+        font-size: 20px;
+        font-weight: 700;
+        text-wrap: wrap;
+        color: white;
+      }
 
     }
 
